--- a/test/modules/View/Template/index/index.phtml
+++ b/test/modules/View/Template/index/index.phtml
@@ -16,7 +16,5 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-/* @var $this PowerOn\View\View */
+/* @var $this \App\View\AppView */
 ?>
-Este es el template principal
-<?= $this->time->getTime() ?>
