--- a/test/src/View/Template/index/index.phtml
+++ b/test/src/View/Template/index/index.phtml
@@ -17,7 +17,6 @@
  */
 
 /* @var $this \App\View\AppView */
-echo $this->form->create($this->testform);
-
+echo $this->html->table($this->table);
 ?>
 
