--- a/src/Exceptions/Template/layout.phtml
+++ b/src/Exceptions/Template/layout.phtml
@@ -17,5 +17,13 @@
  */
 
 /* @var $this PowerOn\View\View */
-var_dump($this->errors);
 ?>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Error</title>
+    </head>
+    <body>
+        <?= $this->content ?>
+    </body>
+</html>
