--- a/test/src/View/Template/layout/error.phtml
+++ b/test/src/View/Template/layout/error.phtml
@@ -16,10 +16,14 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-use PowerOn\Utility\Config;
+/* @var $this PowerOn\View\View */
 ?>
-<h1>Temporalmente fuera de servicio...</h1>
-<p>
-    Contactese con el webmaster para m&aacute;s detalles:
-    <a href="mailto:<?= Config::get('Webmaster.email') ?>"><?= Config::get('Webmaster.name') ?></a>
-</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Error production</title>
+    </head>
+    <body>
+        <?= $this->content ?>
+    </body>
+</html>
