--- a/test/src/View/Template/error/default.phtml
+++ b/test/src/View/Template/error/default.phtml
@@ -1,5 +1,4 @@
 <?php
-
 /*
  * Copyright (C) PowerOn Sistemas
  *
@@ -16,29 +15,7 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
+?>
 
-/*
- * Configuracion de la aplicación completa y los servicios instalados.
- * En esta sección se configuran todos los servicios utilizados.
- * Por ejemplo, si se está utilizando DataBaseService:
- * return [
- *      'DataBaseService' => [
- *          'host' => 'localhost',
- *          'user' => ...
- *      ]
- * ]
- */
-return [
-    'Global' => [
-        'lang' => 'es'
-    ],
-    'Date' => [
-        'date' => 'd/m/Y',
-        'date_time' => 'd/m/Y H:i',
-        'time' => 'H:i'
-    ],
-    'Webmaster' => [
-        'name' => 'Lucas S. Sosa',
-        'email' => 'sosalucas87@gmail.com'
-    ]
-];
+<h1>Ocurri&oacute; un problema</h1>
+<p>La p&aacute;gina que esta intentando visitar tiene problemas para cargar, intentelo nuevamente m&aacute;s tarde o contacte al webmaster.</p>
