--- a/test/src/View/Template/error/error-404.phtml
+++ b/test/src/View/Template/error/error-404.phtml
@@ -21,8 +21,5 @@
 $exception = $this->exception;
 ?>
 
-<h1>Error en modo producci&oacute;n</h1>
-<h3>Excepcion completa</h3>
-<?php k($exception) ?>
-<h3>Excepcion anterior</h3>
-<?php k($exception->getPrevious());
+<h1>La p&aacute;gina solicitada no existe</h1>
+<p>La p&aacute;gina que esta intentando visitar ya no se encuentra en el servidor, si cree que es un error contacte al webmaster.</p>
