--- a/test/src/View/Template/error/error-500.phtml
+++ b/test/src/View/Template/error/error-500.phtml
@@ -15,11 +15,9 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-
-use PowerOn\Utility\Config;
 ?>
 <h1>Temporalmente fuera de servicio...</h1>
 <p>
-    Contactese con el webmaster para m&aacute;s detalles:
-    <a href="mailto:<?= Config::get('Webmaster.email') ?>"><?= Config::get('Webmaster.name') ?></a>
+    &iexcl;Ups!, Esta p&aacute;gina se encuentra temporalmente fuera de servicio, estamos trabajando para que se encuentre activa lo m&aacute;s
+    r&aacute;pido posible. Disculpe las molestias ocacionadas.
 </p>
