--- a/test/src/View/Template/layout/error.phtml
+++ b/test/src/View/Template/layout/error.phtml
@@ -24,6 +24,6 @@
         <title>Error production</title>
     </head>
     <body>
-        <?= $this->content ?>
+        <?= $this->content() ?>
     </body>
 </html>
