--- a/src/Exceptions/Template/layout.phtml
+++ b/src/Exceptions/Template/layout.phtml
@@ -24,6 +24,6 @@
         <title>Error</title>
     </head>
     <body>
-        <?= $this->content ?>
+        <?= $this->content() ?>
     </body>
 </html>
