--- a/test/webroot/css/poweron.css
+++ b/test/webroot/css/poweron.css
@@ -1,4 +1,3 @@
-<?php
 /*
  * Copyright (C) PowerOn Sistemas
  *
@@ -16,26 +15,12 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-/* @var $this PowerOn\View\View */
-?>
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>PowerOn Sistemas - Error</title>
-        <?php $this->html->css('poweron.css') ?>
-        <?= $this->html->css() ?>
-    </head>
-    <body>
-        <div id="header">
-            <?= $this->html->img('logo.png', ['height' => 40]) ?>
-        </div>
-        <div id="content">
-            <?= $this->content() ?>
-        </div>
-        <footer id="footer">
-            <div id="load_time">
-                T: <?= number_format(microtime(TRUE) - PO_START_TIME, 2); ?>ms
-            </div>
-        </footer>
-    </body>
-</html>
+body { margin: 0; padding: 0; font-family: Arial; }
+img { max-width: 100%; }
+#header { position: absolute;left: 0px; top: 0px; right: 0px; height: 50px; background-image: url('../img/bggray.jpg'); 
+          box-sizing: border-box; padding: 5px; }
+#content { position: absolute; left: 0px; top: 50px; right: 0px; box-sizing: border-box; padding: 20px; }
+#footer { position: absolute;left: 0px; bottom: 0px; right: 0px; height: 30px; background-image: url('../img/bggray.jpg'); 
+          box-sizing: border-box; padding: 5px; color: white; }
+
+#footer #load_time { float: right; font-weight: bold; }
